Lidar added! 	modified:   linux/Makefile 	modified:   linux/blynk 	new file:   linux/lidarlite_v3.cpp 	new file:   linux/lidarlite_v3.h 	new file:   linux/lidarlite_v3.o 	modified:   linux/main.cpp 	modified:   linux/main.o

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -51,6 +51,7 @@ ifeq ($(target),raspberry)
 endif
 
 SOURCES=main.cpp \
+	lidarlite_v3.cpp\
 	../src/utility/BlynkDebug.cpp \
 	../src/utility/BlynkHandlers.cpp \
 	../src/utility/BlynkTimer.cpp
